fix(NyxTabs): refine panel overflow layout

--- a/src/components/NyxTabs/NyxTabs.scss
+++ b/src/components/NyxTabs/NyxTabs.scss
@@ -28,7 +28,7 @@
     display: flex;
     flex: 1 1 auto;
     flex-wrap: nowrap;
-    min-height: 0;
+    min-height: 100%;
     overflow: hidden;
     transform: translateX(calc(0px - (var(--nyx-tab-index)) * 100%));
   }
